--- a/index.html
+++ b/index.html
@@ -26,8 +26,30 @@
       </section>
 
       <section id="about">
-        <h2>About Me</h2>
-        <p>Insert your bio here.</p>
+        <div class="avatar-wrapper">
+          <img src="images/portrait.jpg" alt="John Bouakhasith" />
+          <div class="details">
+            <h2>👋 Hello, World!</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Tincidunt lobortis feugiat vivamus at augue. Ut placerat orci
+              nulla pellentesque dignissim enim sit. Adipiscing elit
+              pellentesque habitant morbi tristique. Egestas quis ipsum
+              suspendisse ultrices gravida dictum fusce ut placerat. In
+              pellentesque massa placerat duis ultricies lacus sed.
+            </p>
+            <p>
+              Laoreet sit amet cursus sit amet dictum sit. Eu non diam phasellus
+              vestibulum lorem sed risus. Suscipit tellus mauris a diam maecenas
+              sed. Eu scelerisque felis imperdiet proin fermentum leo vel orci.
+              Netus et malesuada fames ac turpis egestas sed. Leo duis ut diam
+              quam nulla porttitor massa. Amet nisl suscipit adipiscing bibendum
+              est. Id consectetur purus ut faucibus. Pretium fusce id velit ut
+              tortor.
+            </p>
+          </div>
+        </div>
       </section>
 
       <section id="projects">
