--- a/index.html
+++ b/index.html
@@ -54,39 +54,46 @@
 
       <section id="projects">
         <h2>Projects</h2>
-        <ul>
-          <li>
+        <div id="projects-list">
+          <div class="project">
             <h3>Project 1</h3>
             <p>Description of project 1.</p>
             <a href="#" class="btn-secondary">View Project</a>
-          </li>
-          <li>
+          </div>
+          <div class="project">
             <h3>Project 2</h3>
             <p>Description of project 2.</p>
             <a href="#" class="btn-secondary">View Project</a>
-          </li>
-          <li>
+          </div>
+          <div class="project">
             <h3>Project 3</h3>
             <p>Description of project 3.</p>
             <a href="#" class="btn-secondary">View Project</a>
-          </li>
-        </ul>
+          </div>
+          <div class="project">
+            <h3>Project 4</h3>
+            <p>Description of project 4.</p>
+            <a href="#" class="btn-secondary">View Project</a>
+          </div>
+        </div>
       </section>
 
       <section id="contact">
-        <h2>Contact Me</h2>
-        <form action="#">
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" required />
+        <div class="contact-form">
+          <h2>Contact Me</h2>
+          <form action="#">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required />
 
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required />
 
-          <label for="message">Message</label>
-          <textarea id="message" name="message" required></textarea>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required></textarea>
 
-          <button type="submit" class="btn-primary">Send Message</button>
-        </form>
+            <button type="submit" class="btn-primary">Send Message</button>
+          </form>
+        </div>
       </section>
     </main>
 
