--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Junior Developer Portfolio</title>
+    <title>Junior Web Developer Portfolio</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -20,36 +20,39 @@
 
     <main>
       <section id="hero">
-        <h1>Junior Developer Portfolio</h1>
+        <h1>Junior Web Developer Portfolio</h1>
         <p>Welcome to my portfolio website!</p>
         <a href="#" class="btn-primary">View Projects</a>
       </section>
 
       <section id="about">
+        <h2>About Me</h2>
         <div class="avatar-wrapper">
-          <img src="images/portrait.jpg" alt="John Bouakhasith" />
+          <img src="avatar.jpg" alt="Profile Picture" />
           <div class="details">
-            <h2>👋 Hello, World!</h2>
+            <h3>John Doe</h3>
+            <p>Junior Web Developer</p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Tincidunt lobortis feugiat vivamus at augue. Ut placerat orci
-              nulla pellentesque dignissim enim sit. Adipiscing elit
-              pellentesque habitant morbi tristique. Egestas quis ipsum
-              suspendisse ultrices gravida dictum fusce ut placerat. In
-              pellentesque massa placerat duis ultricies lacus sed.
+              Hi, my name is John and I am a junior web developer. I specialize
+              in HTML, CSS, and JavaScript.
             </p>
             <p>
-              Laoreet sit amet cursus sit amet dictum sit. Eu non diam phasellus
-              vestibulum lorem sed risus. Suscipit tellus mauris a diam maecenas
-              sed. Eu scelerisque felis imperdiet proin fermentum leo vel orci.
-              Netus et malesuada fames ac turpis egestas sed. Leo duis ut diam
-              quam nulla porttitor massa. Amet nisl suscipit adipiscing bibendum
-              est. Id consectetur purus ut faucibus. Pretium fusce id velit ut
-              tortor.
+              In my free time, I enjoy experimenting with new web technologies
+              and building cool web apps.
             </p>
           </div>
         </div>
+      </section>
+
+      <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>Node.js</li>
+        </ul>
       </section>
 
       <section id="projects">
@@ -70,35 +73,28 @@
             <p>Description of project 3.</p>
             <a href="#" class="btn-secondary">View Project</a>
           </div>
-          <div class="project">
-            <h3>Project 4</h3>
-            <p>Description of project 4.</p>
-            <a href="#" class="btn-secondary">View Project</a>
-          </div>
         </div>
       </section>
 
       <section id="contact">
-        <div class="contact-form">
-          <h2>Contact Me</h2>
-          <form action="#">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required />
+        <h2>Contact Me</h2>
+        <form action="#">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required />
 
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required />
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
 
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required></textarea>
+          <label for="message">Message</label>
+          <textarea id="message" name="message" required></textarea>
 
-            <button type="submit" class="btn-primary">Send Message</button>
-          </form>
-        </div>
+          <button type="submit" class="btn-primary">Send Message</button>
+        </form>
       </section>
     </main>
 
     <footer>
-      <p>&copy; 2023 Junior Developer Portfolio. All rights reserved.</p>
+      <p>&copy; 2023 Junior Web Developer Portfolio. All rights reserved.</p>
     </footer>
   </body>
 </html>
