changed style using Bootstrap

--- a/index.html
+++ b/index.html
@@ -3,98 +3,133 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Junior Web Developer Portfolio</title>
+    <title>Portfolio | Junior Web Developer</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+    <header class="bg-light">
+      <nav class="navbar navbar-expand-md navbar-light container">
+        <a class="navbar-brand" href="#">My Portfolio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
-    <main>
-      <section id="hero">
-        <h1>Junior Web Developer Portfolio</h1>
-        <p>Welcome to my portfolio website!</p>
-        <a href="#" class="btn-primary">View Projects</a>
-      </section>
-
-      <section id="about">
-        <h2>About Me</h2>
-        <div class="avatar-wrapper">
-          <img src="avatar.jpg" alt="Profile Picture" />
-          <div class="details">
-            <h3>John Doe</h3>
-            <p>Junior Web Developer</p>
+    <main class="container my-5">
+      <section id="about" class="py-5">
+        <div class="row">
+          <div class="col-md-6">
+            <h2>About Me</h2>
             <p>
-              Hi, my name is John and I am a junior web developer. I specialize
-              in HTML, CSS, and JavaScript.
+              Hi, I'm [Your Name], a junior web developer with a passion for
+              creating beautiful, responsive websites. I recently completed a
+              web development course and I am eager to put my skills to the
+              test.
             </p>
-            <p>
-              In my free time, I enjoy experimenting with new web technologies
-              and building cool web apps.
-            </p>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="https://via.placeholder.com/500x500"
+              alt="Profile Picture"
+              class="img-fluid"
+            />
           </div>
         </div>
       </section>
 
-      <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-          <li>Node.js</li>
-        </ul>
-      </section>
-
-      <section id="projects">
-        <h2>Projects</h2>
-        <div id="projects-list">
-          <div class="project">
-            <h3>Project 1</h3>
-            <p>Description of project 1.</p>
-            <a href="#" class="btn-secondary">View Project</a>
+      <section id="projects" class="py-5">
+        <h2>My Projects</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card mb-3">
+              <div class="card-body">
+                <h3 class="card-title">Project 1</h3>
+                <p class="card-text">Description of project 1.</p>
+                <a href="#" class="btn btn-primary">View project</a>
+              </div>
+            </div>
           </div>
-          <div class="project">
-            <h3>Project 2</h3>
-            <p>Description of project 2.</p>
-            <a href="#" class="btn-secondary">View Project</a>
-          </div>
-          <div class="project">
-            <h3>Project 3</h3>
-            <p>Description of project 3.</p>
-            <a href="#" class="btn-secondary">View Project</a>
+          <div class="col-md-6">
+            <div class="card mb-3">
+              <div class="card-body">
+                <h3 class="card-title">Project 2</h3>
+                <p class="card-text">Description of project 2.</p>
+                <a href="#" class="btn btn-primary">View project</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
 
-      <section id="contact">
+      <section id="contact" class="py-5">
         <h2>Contact Me</h2>
-        <form action="#">
-          <label for="name">Name</label>
-          <input type="text" id="name" name="name" required />
-
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
-
-          <label for="message">Message</label>
-          <textarea id="message" name="message" required></textarea>
-
-          <button type="submit" class="btn-primary">Send Message</button>
+        <form action="#" method="post">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input
+              type="text"
+              id="name"
+              name="name"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="form-control"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea
+              id="message"
+              name="message"
+              class="form-control"
+              required
+            ></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Send Message</button>
         </form>
       </section>
     </main>
 
-    <footer>
-      <p>&copy; 2023 Junior Web Developer Portfolio. All rights reserved.</p>
+    <footer class="bg-light text-center py-3">
+      <p>Copyright &copy; [Your Name]</p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/esm/popper"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
