--- a/index.html
+++ b/index.html
@@ -3,133 +3,299 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | Junior Web Developer</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Junior Web Developer Portfolio</title>
+
+    <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="styles/style.css" />
+
+    <!-- Font Awesome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="bg-light">
-      <nav class="navbar navbar-expand-md navbar-light container">
-        <a class="navbar-brand" href="#">My Portfolio</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">johnbthe.dev</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Header -->
+    <header class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Junior Web Developer</h1>
+        <p class="lead">
+          Welcome to my portfolio. Here you can find information about my skills
+          and projects.
+        </p>
+      </div>
     </header>
 
-    <main class="container my-5">
-      <section id="about" class="py-5">
-        <div class="row">
+    <!-- About Section -->
+    <section id="about" class="py-5 text-justify">
+      <div class="container">
+        <div class="row align-items-center">
           <div class="col-md-6">
             <h2>About Me</h2>
             <p>
-              Hi, I'm [Your Name], a junior web developer with a passion for
-              creating beautiful, responsive websites. I recently completed a
-              web development course and I am eager to put my skills to the
-              test.
+              👋 Hello there! My name is John Bouakhasith and I am a junior web
+              developer with expertise in HTML, CSS, JavaScript, and various web
+              development frameworks. My passion lies in creating visually
+              appealing and highly functional websites that provide an optimal
+              user experience.
+            </p>
+            <p>
+              I am primarily self-taught, utilizing resources such as
+              FreeCodeCamp, YouTube, and The Odin Project to hone my skills. In
+              addition, I have some experience working with React and PHP, and
+              I'm always eager to expand my knowledge.
+            </p>
+
+            <p>
+              When I'm not coding, you can find me indulging in my other
+              interests. I enjoy playing PC games, watching TV shows and sports,
+              traveling when possible, and spending quality time with my furry
+              feline companions - Kevin and Calvin.
+            </p>
+
+            <p>
+              Below, you can see some examples of my work. Please feel free to
+              reach out if you have any questions or inquiries!
             </p>
           </div>
           <div class="col-md-6">
             <img
-              src="https://via.placeholder.com/500x500"
+              src="images/avatar.png"
               alt="Profile Picture"
               class="img-fluid"
+              style="float: right"
             />
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="projects" class="py-5">
-        <h2>My Projects</h2>
+    <!-- Services Section -->
+    <section id="services" class="py-5 bg-light text-justify">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>My Services</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">🎨 Web Design</h5>
+                <p class="card-text">
+                  I create visually appealing and user-friendly designs for
+                  websites and web applications.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">👨🏻‍💻 Web Development</h5>
+                <p class="card-text">
+                  I develop custom websites and web applications using HTML,
+                  CSS, JavaScript, and various web development frameworks.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">📱 Responsive Design</h5>
+                <p class="card-text">
+                  I ensure that all my designs are responsive and optimized for
+                  different devices and screen sizes.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="py-5 text-justify">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>My Portfolio</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                src="https://via.placeholder.com/400x300"
+                class="card-img-top"
+                alt="Project 1"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Project 1</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  fermentum, leo non aliquet pulvinar, felis nulla commodo
+                  sapien, et commodo turpis odio euismod eros.
+                </p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                src="https://via.placeholder.com/400x300"
+                class="card-img-top"
+                alt="Project 2"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Project 2</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  fermentum, leo non aliquet pulvinar, felis nulla commodo
+                  sapien, et commodo turpis odio euismod eros.
+                </p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img
+                src="https://via.placeholder.com/400x300"
+                class="card-img-top"
+                alt="Project 3"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Project 3</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  fermentum, leo non aliquet pulvinar, felis nulla commodo
+                  sapien, et commodo turpis odio euismod eros.
+                </p>
+                <a href="#" class="btn btn-primary">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>Contact Me</h2>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="card mb-3">
-              <div class="card-body">
-                <h3 class="card-title">Project 1</h3>
-                <p class="card-text">Description of project 1.</p>
-                <a href="#" class="btn btn-primary">View project</a>
+            <form>
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" required />
               </div>
-            </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" required />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea
+                  class="form-control"
+                  id="message"
+                  rows="5"
+                  required
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
           </div>
           <div class="col-md-6">
-            <div class="card mb-3">
+            <div class="card">
               <div class="card-body">
-                <h3 class="card-title">Project 2</h3>
-                <p class="card-text">Description of project 2.</p>
-                <a href="#" class="btn btn-primary">View project</a>
+                <h5 class="card-title">Contact Information</h5>
+                <p class="card-text">
+                  Feel free to contact me if you have any questions or would
+                  like to discuss a potential project.
+                </p>
+                <ul class="list-unstyled">
+                  <li>✉️ email@example.com</li>
+                  <li>📞 (123) 456-7890</li>
+                  <li>📍 City, State</li>
+                </ul>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="contact" class="py-5">
-        <h2>Contact Me</h2>
-        <form action="#" method="post">
-          <div class="form-group">
-            <label for="name">Name:</label>
-            <input
-              type="text"
-              id="name"
-              name="name"
-              class="form-control"
-              required
-            />
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-3">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-12">
+            <p class="text-center">
+              Copyright © 2023 Junior Web Developer Portfolio
+            </p>
           </div>
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              class="form-control"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="message">Message:</label>
-            <textarea
-              id="message"
-              name="message"
-              class="form-control"
-              required
-            ></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Send Message</button>
-        </form>
-      </section>
-    </main>
-
-    <footer class="bg-light text-center py-3">
-      <p>Copyright &copy; [Your Name]</p>
+        </div>
+      </div>
     </footer>
 
+    <!-- Latest compiled JavaScript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/esm/popper"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-gO91x00RdOevdtHKM6UvS6Uzn07gO3z6U3Gq/nyf9W1p8y/cJbGzDqTxydaNw+tn"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
