modified styles and index

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
       data-aos-duration="3000"
     >
       <div class="container">
-        <h1 class="display-5">
+        <h1 class="display-5" data-aos="fade-right" data-aos-duration="3000">
           <p style="margin-bottom: 5px">
             John Bouakhasith, <span class="typed-text"></span
             ><span class="cursor">&nbsp;</span>
           </p>
         </h1>
-        <p class="lead">
+        <p class="lead" data-aos="fade-left" data-aos-duration="3000">
           Welcome to my portfolio. Here you can find information about my skills
           and projects.
         </p>
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-6" data-aos="fade-right" data-aos-duration="3000">
-            <h2>About Me</h2>
+            <h2 data-aos="fade-right" data-aos-duration="3000">About Me</h2>
             <p>
               👋 Hello there! My name is John Bouakhasith and I am a junior web
               developer with expertise in HTML, CSS, JavaScript, and various web
@@ -141,12 +141,20 @@
     >
       <div class="container">
         <div class="row">
-          <div class="col-md-12 pb-2">
+          <div
+            class="col-md-12 pb-2"
+            data-aos="fade-right"
+            data-aos-duration="3000"
+          >
             <h2>My Services</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div
+            class="col-md-4 bottom-margin"
+            data-aos="fade-up"
+            data-aos-duration="3000"
+          >
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">🎨 Web Design</h5>
@@ -157,7 +165,11 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div
+            class="col-md-4 bottom-margin"
+            data-aos="fade-up"
+            data-aos-duration="3000"
+          >
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">👨🏻‍💻 Web Development</h5>
@@ -168,7 +180,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-up" data-aos-duration="3000">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">📱 Responsive Design</h5>
@@ -340,13 +352,13 @@
     <section id="contact" class="pb-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-12" data-aos="fade-up" data-aos-duration="3000">
+          <div class="col-md-12" data-aos="fade-right" data-aos-duration="3000">
             <h2>Contact Me</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6" data-aos="fade-right" data-aos-duration="3000">
-            <form>
+          <div class="col-md-6" data-aos="fade-up" data-aos-duration="3000">
+            <form class="bottom-margin">
               <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" id="name" required />
@@ -374,8 +386,8 @@
               <div class="card-body">
                 <h5 class="card-title">Contact Information</h5>
                 <p class="card-text">
-                  <s>Feel free to contact me via the form on the left</s> and
-                  follow me on any of the following social media platforms:
+                  <s>Feel free to contact me via the form</s> and follow me on
+                  any of the following social media platforms:
                 </p>
                 <ul class="list-unstyled">
                   <li>
