changed Contact Information to fade-up

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="styles/style.css" />
 
     <!-- Animate on Scroll -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -381,7 +381,7 @@
               </button>
             </form>
           </div>
-          <div class="col-md-6" data-aos="fade-left" data-aos-duration="3000">
+          <div class="col-md-6" data-aos="fade-up" data-aos-duration="3000">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Contact Information</h5>
@@ -436,7 +436,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
