changed avatar to zoom-in-up

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               reach out if you have any questions or inquiries!
             </p>
           </div>
-          <div class="col-md-6" data-aos="fade-down" data-aos-duration="3000">
+          <div class="col-md-6" data-aos="zoom-in-up" data-aos-duration="3000">
             <img
               src="images/avatar.png"
               alt="Profile Picture"
